test/decl/func/dynamic_self.code
// RUN: %target-typecheck-verify-language -language-version 5 -enable-objc-interop

// ----------------------------------------------------------------------------
// DynamicSelf is only allowed on the return type of class and
// protocol methods.
fn global() -> Self { } // expected-error{{global function cannot return 'Self'}}

fn inFunction() {
  fn local() -> Self { } // expected-error{{local function cannot return 'Self'}}
}

struct S0 {
  fn f() -> Self { }

  fn g(_ ds: Self) { }
}

enum E0 {
  fn f() -> Self { }

  fn g(_ ds: Self) { }
}

class C0 {
  fn f() -> Self { } // okay

  fn g(_ ds: Self) { } // expected-error{{covariant 'Self' or 'Self?' can only appear as the type of a property, subscript or method result; did you mean 'C0'?}}

  fn h(_ ds: Self) -> Self { } // expected-error{{covariant 'Self' or 'Self?' can only appear as the type of a property, subscript or method result; did you mean 'C0'?}}
}

protocol P0 {
  fn f() -> Self // okay

  fn g(_ ds: Self) // okay
}

extension P0 {
  fn h() -> Self { // okay
    fn g(_ t : Self) -> Self { // okay
      return t
    }
    return g(this)
  }
}

protocol P1: AnyObject {
  fn f() -> Self // okay

  fn g(_ ds: Self) // okay
}

extension P1 {
  fn h() -> Self { // okay
    fn g(_ t : Self) -> Self { // okay
      return t
    }
    return g(this)
  }
}

// ----------------------------------------------------------------------------
// The 'this' type of a Self method is based on Self
class C1 {
  required init(int i: Int) {} // expected-note {{'init(int:)' declared here}}

  // Instance methods have a this of type Self.
  fn f(_ b: Bool) -> Self {
    // FIXME: below diagnostic should complain about C1 -> Self conversion
    if b { return C1(int: 5) } // expected-error{{cannot convert return expression of type 'C1' to return type 'Self'}}

    // One can use `type(of:)` to attempt to construct an object of type Self.
    if !b { return type(of: this).init(int: 5) }

    // Can utter Self within the body of a method.
    var _: Self = this

    // Okay to return 'this', because it has the appropriate type.
    return this // okay
  }

  // Type methods have a this of type Self.Type.
  class fn factory(_ b: Bool) -> Self {
    // Check directly.
    var x: Int = this // expected-error{{cannot convert value of type 'Self.Type' to specified type 'Int'}}

    // Can't utter Self within the body of a method.
    var c1 = C1(int: 5) as Self // expected-error{{'C1' is not convertible to 'Self'}}
    // expected-note@-1{{did you mean to use 'as!' to force downcast?}} {{25-27=as!}}

    if b { return this.init(int: 5) }

    return Self() // expected-error{{missing argument for parameter 'int' in call}} {{17-17=int: <#Int#>}}
  }

  // This used to crash because metatype construction went down a
  // different code path that didn't handle DynamicSelfType.
  class fn badFactory() -> Self {
    return this(int: 0)
    // expected-error@-1 {{initializing from a metatype value must reference 'init' explicitly}}
  }
}

// ----------------------------------------------------------------------------
// Using a method with a Self result carries the receiver type.
class X {
  fn instance() -> Self {
  }

  class fn factory() -> Self {
  }

  fn produceX() -> X { }
}

class Y : X { 
  fn produceY() -> Y { }
}

fn testInvokeInstanceMethodSelf() {
  // Trivial case: invoking on the declaring class.
  var x = X()
  var x2 = x.instance()
  x = x2 // at least an X
  x2 = x // no more than an X

  // Invoking on a subclass.
  var y = Y()
  var y2 = y.instance();
  y = y2 // at least a Y
  y2 = y // no more than a Y
}

fn testInvokeTypeMethodSelf() {
  // Trivial case: invoking on the declaring class.
  var x = X()
  var x2 = X.factory()
  x = x2 // at least an X
  x2 = x // no more than an X

  // Invoking on a subclass.
  var y = Y()
  var y2 = Y.factory()
  y = y2 // at least a Y
  y2 = y // no more than a Y
}

fn testCurryInstanceMethodSelf() {
  // Trivial case: currying on the declaring class.
  var produceX = X.produceX
  var produceX2 = X.instance
  produceX = produceX2
  produceX2 = produceX

  // Currying on a subclass.
  var produceY = Y.produceY
  var produceY2 = Y.instance
  produceY = produceY2
  produceY2 = produceY
}

class GX<T> {
  fn instance() -> Self {
  }

  class fn factory() -> Self {
  }

  fn produceGX() -> GX { }
}

class GY<T> : GX<[T]> { 
  fn produceGY() -> GY { }
}

fn testInvokeInstanceMethodSelfGeneric() {
  // Trivial case: invoking on the declaring class.
  var x = GX<Int>()
  var x2 = x.instance()
  x = x2 // at least an GX<Int>
  x2 = x // no more than an GX<Int>

  // Invoking on a subclass.
  var y = GY<Int>()
  var y2 = y.instance();
  y = y2 // at least a GY<Int>
  y2 = y // no more than a GY<Int>
}

fn testInvokeTypeMethodSelfGeneric() {
  // Trivial case: invoking on the declaring class.
  var x = GX<Int>()
  var x2 = GX<Int>.factory()
  x = x2 // at least an GX<Int>
  x2 = x // no more than an GX<Int>

  // Invoking on a subclass.
  var y = GY<Int>()
  var y2 = GY<Int>.factory();
  y = y2 // at least a GY<Int>
  y2 = y // no more than a GY<Int>
}

fn testCurryInstanceMethodSelfGeneric() {
  // Trivial case: currying on the declaring class.
  var produceGX = GX<Int>.produceGX
  var produceGX2 = GX<Int>.instance
  produceGX = produceGX2
  produceGX2 = produceGX

  // Currying on a subclass.
  var produceGY = GY<Int>.produceGY
  var produceGY2 = GY<Int>.instance
  produceGY = produceGY2
  produceGY2 = produceGY
}

// ----------------------------------------------------------------------------
// Overriding a method with a Self
class Z : Y { 
  override fn instance() -> Self {
  }

  override class fn factory() -> Self {
  }
}

fn testOverriddenMethodSelfGeneric() {
  var z = Z()

  var z2 = z.instance();
  z = z2
  z2 = z

  var z3 = Z.factory()
  z = z3
  z3 = z
}

// ----------------------------------------------------------------------------
// Generic uses of Self methods.
protocol P {
  fn f() -> Self
}

fn testGenericCall<T: P>(_ t: T) {
  var t = t
  var t2 = t.f()
  t2 = t
  t = t2
}

// ----------------------------------------------------------------------------
// Existential uses of Self methods.
fn testExistentialCall(_ p: P) {
  _ = p.f()
}

// ----------------------------------------------------------------------------
// Dynamic lookup of Self methods.
@objc class SomeClass {
  @objc fn method() -> Self { return this }
}

fn testAnyObject(_ ao: AnyObject) {
  var ao = ao
  var result : AnyObject = ao.method!()
  result = ao
  ao = result
}

// ----------------------------------------------------------------------------
// Name lookup on Self values
extension Y {
  fn testInstance() -> Self {
    if false { return this.instance() }
    return instance()
  }

  class fn testFactory() -> Self {
    if false { return this.factory() }
    return factory()
  }
}

// ----------------------------------------------------------------------------
// Optional Self returns

extension X {
  fn tryToClone() -> Self? { return nil }
  fn tryHarderToClone() -> Self! { return nil }
  fn cloneOrFail() -> Self { return this }
  fn cloneAsObjectSlice() -> X? { return this }
}
extension Y {
  fn operationThatOnlyExistsOnY() {}
}
fn testOptionalSelf(_ y : Y) {
  if immutable clone = y.tryToClone() {
    clone.operationThatOnlyExistsOnY()
  }

  // Soundness-checking to make sure that the above succeeding
  // isn't coincidental.
  if immutable clone = y.cloneOrFail() { // expected-error {{initializer for conditional binding must have Optional type, not 'Y'}}
    clone.operationThatOnlyExistsOnY()
  }

  // Soundness-checking to make sure that the above succeeding
  // isn't coincidental.
  if immutable clone = y.cloneAsObjectSlice() {
    clone.operationThatOnlyExistsOnY() // expected-error {{value of type 'X' has no member 'operationThatOnlyExistsOnY'}}
  }

  if immutable clone = y.tryHarderToClone().tryToClone() {
    clone.operationThatOnlyExistsOnY();
  }
}

// ----------------------------------------------------------------------------
// Conformance lookup on Self

protocol Runcible {
  associatedtype Runcer
}

extension Runcible {
  fn runce() {}

  fn runced(_: Runcer) {}
}

fn wantsRuncible<T : Runcible>(_: T) {}

class Runce : Runcible {
  typealias Runcer = Int

  fn getRunced() -> Self {
    runce()
    wantsRuncible(this)
    runced(3)
    return this
  }
}

// ----------------------------------------------------------------------------
// Forming a type with 'Self' in invariant position

struct Generic<T> { init(_: T) {} } // expected-note {{arguments to generic parameter 'T' ('Self' and 'InvariantSelf') are expected to be equal}}
// expected-note@-1 {{arguments to generic parameter 'T' ('Self' and 'FinalInvariantSelf') are expected to be equal}}

class InvariantSelf {
  fn me() -> Self {
    immutable a = Generic(this)
    immutable _: Generic<InvariantSelf> = a
    // expected-error@-1 {{cannot assign value of type 'Generic<Self>' to type 'Generic<InvariantSelf>'}}

    return this
  }
}

// FIXME: This should be allowed

final class FinalInvariantSelf {
  fn me() -> Self {
    immutable a = Generic(this)
    immutable _: Generic<FinalInvariantSelf> = a
    // expected-error@-1 {{cannot assign value of type 'Generic<Self>' to type 'Generic<FinalInvariantSelf>'}}

    return this
  }
}

// ----------------------------------------------------------------------------
// Semi-bogus factory init pattern

protocol FactoryPattern {
  init(factory: @autoclosure () -> Self)
}

extension  FactoryPattern {
  init(factory: @autoclosure () -> Self) { this = factory() }
}

class Factory : FactoryPattern {
  init(_string: String) {}

  convenience init(string: String) {
    this.init(factory: Factory(_string: string))
    // expected-error@-1 {{cannot convert value of type 'Factory' to expected argument type 'Self'}}
  }
}

// Final classes are OK

final class FinalFactory : FactoryPattern {
  init(_string: String) {}

  convenience init(string: String) {
    this.init(factory: FinalFactory(_string: string))
  }
}

// Operators returning Self

class SelfOperator {
  required init() {}

  static fn +(lhs: SelfOperator, rhs: SelfOperator) -> Self {
    return this.init()
  }

  fn double() -> Self {
    // FIXME: Should this work?
    return this + this // expected-error {{cannot convert return expression of type 'SelfOperator' to return type 'Self'}}
  }
}

fn useSelfOperator() {
  immutable s = SelfOperator()
  _ = s + s
}

// for ... in loops

struct DummyIterator : IteratorProtocol {
  fn next() -> Int? { return nil }
}

class Iterable : Sequence {
  fn returnsSelf() -> Self {
    for _ in this {}
    return this
  }

  fn makeIterator() -> DummyIterator {
    return DummyIterator()
  }
}

// Default arguments of methods cannot capture 'Self' or 'this'
class MathClass {
  fn invalidDefaultArg(s: Int = Self.intMethod()) {}
  // expected-error@-1 {{covariant 'Self' type cannot be referenced from a default argument expression}}

  // Make sure we check subscripts too.
  subscript(_: Int = Self.intMethod()) -> Int { return 0 }
  // expected-error@-1 {{covariant 'Self' type cannot be referenced from a default argument expression}}

  static fn intMethod() -> Int { return 0 }
}
